testdata/baselines/reference/submodule/compiler/jsxChildrenWrongType.errors.txt
other.tsx(8,27): error TS2304: Cannot find name 'React'.


==== other.tsx (1 errors) ====
    /// <reference path="/.lib/react18/react18.d.ts" />
    /// <reference path="/.lib/react18/global.d.ts" />
    
    
    interface PropsType {
        children: [string, number?] | Iterable<boolean>;
    }
    declare class Foo extends React.Component<PropsType, {}> {}
                              ~~~~~
!!! error TS2304: Cannot find name 'React'.
    const b = (
        <Foo>
            {<div/> as unknown}
            {"aa"}
        </Foo>
    );